--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-virtualized": "^9.22.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
